--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    scroll-behavior: smooth;
+  }
+  
+  .section {
+    scroll-margin-top: 80px; /* Adjust based on your nav height */
+  }
+  
+  .wave {
+    display: inline-block;
+    animation: wave 2s infinite;
+  }
+  
+  @keyframes wave {
+    0% { transform: rotate(0.0deg); }
+    10% { transform: rotate(14.0deg); }
+    20% { transform: rotate(-8.0deg); }
+    30% { transform: rotate(14.0deg); }
+    40% { transform: rotate(-4.0deg); }
+    50% { transform: rotate(10.0deg); }
+    60% { transform: rotate(0.0deg); }
+    100% { transform: rotate(0.0deg); }
+  }
+  
